[tool.poetry]
name = "bigquery-utils"
version = "0.1.0"
description = ""
authors = ["Olle Hammarstrom"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
google-cloud-bigquery = "^2.28.1"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
ipdb = "^0.13.9"
black = "^21.9b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
